style.css
html{
    background-color: #27374D;
   /* height: 100%;*/
}

/*body {
    margin: 0;
    display: grid;
    grid-template-rows: auto 8rem;
    padding-top: 1rem;
    height: 100%;
}*/

h1 {
    color: #DDE6ED;
    text-align: center;
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

h2{
    color: #9DB2BF
}

p{
    color: #DDE6ED;
}

#main-logo {
    font-family: "Bodoni Moda", serif;
    font-weight: bold;
    font-style: italic;
    font-size: 2rem;
    margin-top: 1.2rem;
    margin-bottom: 0rem;
    padding: 0;
    box-sizing: border-box;
}

@media (max-width: 40rem) {
    #main-logo {
        font-size: 2rem;
    }
}

.section-title h2 {
  font-family: "Raleway", sans-serif;
  font-size: 3rem;
  font-style: normal;
  font-weight: lighter;
  text-align: center;
  box-sizing: border-box;
  margin: 0;
  padding:0;
}

.main-header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    background-color: #334766;
}


.main-header__brand {
    font-family: "raleway", sans-serif;
    color: #9DB2BF;
    font-size: 2rem;
    text-decoration: none;
    margin: 0 1rem;
}

.main-header__brand img {
    height: 8rem;
}

.main-nav {
    display: flex;
}

.main-nav__items {
    padding: 0;
    margin: 0;
    list-style: none;
    font-family: "raleway", sans-serif;
    vertical-align: text-top;
    display:flex;
    align-items: center;
}

.main-nav__item {
    margin: 0 .75rem;
    font-size: 1rem;
}

.main-nav__item a {
    text-decoration: none;
    color: #9DB2BF;
}

.main-nav__item a:hover {
    color: white;
}

.main-nav__item a:active {
    color: white;
}

.main-nav__item--cta {
    background: white;
    padding: .5rem;
    border-radius: .5rem;
}

.main-nav__item--cta a:hover {
    color: #27374D;
}

#product-overview {
    background-image: linear-gradient(to top, rgba(255, 255, 255, 0.6) 10%, transparent), url("images/springpergola.png");
    background-size: 100%;
    width: 100vw;
    height: 80vh;
    padding: 0px;
    margin: auto;
    background-repeat: no-repeat;
    position: relative;
    /*top: 5rem;*/
    border: black solid 5px;
    box-shadow:3px 3px 5px 3px rgba(0,0,0,0.3);
}



#product-overview h2 {
    font-family: "raleway", sans-serif;
    font-size: 3rem;
    position: absolute;
    bottom: 12%;
    left: 3%;
    color:#27374D; 
}

#product-overview h3 {
    font-family: "raleway", sans-serif;
    font-size: 1.9rem;
    position: absolute;
    bottom: 5%;
    left: 5%;
    color: #27374D;
    text-decoration: none;
}

#product-overview h3 {
    color:#27374D;
    text-decoration: none;
}

#product-overview a:active {
    color:#27374D;
    text-decoration: none;
}

#product-overview a:visited {
    color:#27374D;
    text-decoration: none;
}

h3  a {
    text-decoration: none;
}

h3 a:active {
    text-decoration: none;
}

h3 a:visited {
    text-decoration: none;
}


.grid-container {
    margin-top: 5rem;
    margin-left: 15vw;
    display: grid;
    grid-template-columns: 30rem 30rem;
    grid-template-rows: 30rem 30rem;
    grid-column-gap: 4rem;
    grid-row-gap: 3rem

}



.faq1 {
    background-image: url(./images/louvered\ pergola\ thumnail.png);
    grid-column-start: 1;
    grid-column-end: 2;
    background-repeat: no-repeat;
    /*box-shadow: 3px 3px 5px 3px rgba(0, 0, 0, 0.3)*/
    background-size: 100%; 
}

.faq1 h2 {
    font-family: "raleway", sans-serif;
    font-size: 2rem;
    background-color: #DDE6ED;
    color:#27374D;
}

.faq1 a {
    text-decoration: none;
}

.faq2 {
    background-image: url(./images/pergola\ with\ roof\ thumnail.png);
    grid-column-start: 2;
    grid-column-end: 3;
    background-repeat: no-repeat;
    /*box-shadow: 3px 3px 5px 3px rgba(0, 0, 0, 0.3)*/
    background-size: 100%; 
}

.faq2 h2 { 
    font-family: "raleway", sans-serif;
    font-size: 2rem;
    background-color: #DDE6ED;
    color:#27374D;
}

.faq3 {
    background-image:url(./images/kits\ thumnail.png);
    grid-column-start: 1;
    grid-column-end: 2;
    grid-row-start: 2;
    grid-row-end: 3;
    background-repeat: no-repeat;
    /*box-shadow: 3px 3px 5px 3px rgba(0, 0, 0, 0.3)*/
    background-size: 100%; 
}

.faq3 a {
    text-decoration: none;
}

.faq3 h2 {
    font-family: "raleway", sans-serif;
    font-size: 2rem;
    background-color: #DDE6ED;
    color:#27374D;
}

.faq4 {
    background-image:url(./images/\ ideas\ thumnail.png);
    grid-column-start: 2;
    grid-column-end: 3;
    grid-row-start: 2;
    grid-row-end: 3;
    background-repeat: no-repeat;
    /*box-shadow: 3px 3px 5px 3px rgba(0, 0, 0, 0.3)*/
    background-size: 100%; 
}

.faq4 h2{
    font-family: "raleway", sans-serif;
    font-size: 2rem;
    background-color: #DDE6ED;
    color:#27374D;
}

.first-paragraph {
    color:#DDE6ED;
    font-size: 1.5rem;
    position: relative;
    box-sizing: border-box;
    margin-top: 6rem;
    margin-left: 5rem;
    margin-right: 5rem;
    margin-bottom: 8rem;
    font-family: "raleway", sans-serif;
}

footer {
    background-color: #334766;
    height: 2.5rem;
    display:flex;
    align-items: center;
}

footer a {
    color: #9DB2BF;
    font-size: 1rem;
    font-family: 'raleway';
    margin-left: 5rem;
    text-align: center;
    margin-top: 2rem;
}


@media (max-width: 40rem) {
    .grid-container {
        grid-template-columns: 30rem;
        grid-template-rows: 30rem 30rem 30rem 30rem;
    }

    .faq1 {
        grid-column-start:1;
        grid-row-start: 1;
        grid-row-end: 2;
    }

    .faq2 {
        grid-column-start: 1;
        grid-row-start: 2;
        grid-row-end: 3;
    }

    .faq2 h2 {
        font-family: "raleway", sans-serif;
        font-size: 2rem;
        background-color: #DDE6ED;
        margin-right: 4rem;
        color:#27374D;
    }

    .faq3 {
        grid-column-start: 1;
        grid-row-start: 3;
        grid-row-end: 4;
    }

    .faq4 {
        grid-column-start: 1;
        grid-row-start: 4;
        grid-row-end: 5;
    }

    .faq4 h2 {
        font-family: "raleway", sans-serif;
        font-size: 2rem;
        background-color: #DDE6ED;
        margin-right: 4rem;
        color:#27374D;
    }

    .first-paragraph {
        color:#DDE6ED;
        font-size: 1.5rem;
        position: relative;
        box-sizing: border-box;
        margin-top: 4rem;
        margin-left: 5rem;
        margin-bottom: 4rem;
        font-family: "raleway", sans-serif;
        text-align: center;
    }
}

